--- a/app/about-us.html
+++ b/app/about-us.html
@@ -78,6 +78,27 @@
                         <p>Коллектив Адвокатского Объединения «РУХ» состоит из высококвалифицированных адвокатов,
                             имеющих многолетний практический опыт в области права.</p>
                     </li>
+                    <li class="item">
+                        <div class="image-holder">
+                            <img src="img/cup.png" alt="cup">
+                        </div>
+                        <p>Адвокатское объединение «РУХ» отнесено к ежегодному изданию Правовой элиты Украины 2018
+                            года.</p>
+                    </li>
+                    <li class="item">
+                        <div class="image-holder">
+                            <img src="img/cup.png" alt="cup">
+                        </div>
+                        <p>Имеет опыт ведения дел международных компаний и иностранных компаний в Украине, сопровождение
+                            инвестиционных проектов.</p>
+                    </li>
+                    <li class="item">
+                        <div class="image-holder">
+                            <img src="img/cup.png" alt="cup">
+                        </div>
+                        <p>Коллектив Адвокатского Объединения «РУХ» состоит из высококвалифицированных адвокатов,
+                            имеющих многолетний практический опыт в области права.</p>
+                    </li>
                 </ul>
             </div>
         </div>
