--- a/app/article.html
+++ b/app/article.html
@@ -63,66 +63,211 @@
         <div class="recommended-articles">
             <ul class="intro-categories">
                 <li class="item">
-                    <a href="article.html" class="top-info">
-                        <div class="preview">
-                            <img src="img/test.jpg" alt="Preview">
-                        </div>
-                        <div class="description">
-                            <h3 class="title">Информация для выезда ребенка за границу</h3>
-                            <div class="short-description">
-                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
-                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
-                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
-                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
-                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
                             </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
                         </div>
-                    </a>
-                    <div class="bottom-info">
-                        <time>23 Марта 2019 - 15:29</time>
-                        <a href="#" class="link">Читать статью</a>
                     </div>
                 </li>
                 <li class="item">
-                    <a href="article.html" class="top-info">
-                        <div class="preview">
-                            <img src="img/test.jpg" alt="Preview">
-                        </div>
-                        <div class="description">
-                            <h3 class="title">Информация для выезда ребенка за границу</h3>
-                            <div class="short-description">
-                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
-                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
-                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
-                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
-                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
                             </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
                         </div>
-                    </a>
-                    <div class="bottom-info">
-                        <time>23 Марта 2019 - 15:29</time>
-                        <a href="#" class="link">Читать статью</a>
                     </div>
                 </li>
                 <li class="item">
-                    <a href="article.html" class="top-info">
-                        <div class="preview">
-                            <img src="img/test.jpg" alt="Preview">
-                        </div>
-                        <div class="description">
-                            <h3 class="title">Информация для выезда ребенка за границу</h3>
-                            <div class="short-description">
-                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
-                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
-                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
-                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
-                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
                             </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
                         </div>
-                    </a>
-                    <div class="bottom-info">
-                        <time>23 Марта 2019 - 15:29</time>
-                        <a href="#" class="link">Читать статью</a>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
+                            </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
+                            </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
+                            </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
+                            </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="content-holder">
+                        <a href="article.html" class="top-info">
+                            <div class="preview">
+                                <img src="img/test.jpg" alt="Preview">
+                            </div>
+                            <div class="description">
+                                <h3 class="title">Информация для выезда ребенка за границу</h3>
+                                <div class="short-description">
+                                    <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность
+                                        поехать
+                                        или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня,
+                                        руководители
+                                        танцевального коллектива, тренер спортивной команды, в составе школьной
+                                        экскурсии, и
+                                        тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                        ребенка за границу с лицами, которые его сопровождают.</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="bottom-info">
+                            <time>23 Марта 2019 - 15:29</time>
+                            <a href="#" class="link">Читать статью</a>
+                        </div>
                     </div>
                 </li>
             </ul>
