--- a/app/index.html
+++ b/app/index.html
@@ -120,31 +120,52 @@
                         <a href="#" class="link">Читать статью</a>
                     </div>
                 </li>
+                <li class="item">
+                    <a href="article.html" class="top-info">
+                        <div class="preview">
+                            <img src="img/test.jpg" alt="Preview">
+                        </div>
+                        <div class="description">
+                            <h3 class="title">Информация для выезда ребенка за границу</h3>
+                            <div class="short-description">
+                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
+                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
+                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
+                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="bottom-info">
+                        <time>23 Марта 2019 - 15:29</time>
+                        <a href="#" class="link">Читать статью</a>
+                    </div>
+                </li>
             </ul>
         </div>
-        <div class="pre-footer">
-            <!--no-media class-->
-            <div class="fb-holder">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgoodevs%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1980581345532475"
-                        style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                        allowTransparency="true" allow="encrypted-media"></iframe>
+    </div>
+    <div class="pre-footer">
+        <!--no-media class-->
+        <div class="fb-holder">
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgoodevs%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1980581345532475"
+                    style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowTransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div class="subscribe-block">
+            <div class="quote-block">
+                <h4>Успех адвокатского объединения - успех клиента.</h4>
+                <p>Многолетний опыт адвокатской деятельности в сочетании с нестандартным подходом, обеспечит
+                    разработку эффективной линии защиты Вас и Вашего бизнеса с использованием законных правовых
+                    инструментов. Профессионализм наших сотрудников, постоянный контакт с клиентом, гарантирует Вам
+                    спокойный сон даже в сложной ситуации.</p>
             </div>
-            <div class="subscribe-block">
-                <div class="quote-block">
-                    <h4>Успех адвокатского объединения - успех клиента.</h4>
-                    <p>Многолетний опыт адвокатской деятельности в сочетании с нестандартным подходом, обеспечит
-                        разработку эффективной линии защиты Вас и Вашего бизнеса с использованием законных правовых
-                        инструментов. Профессионализм наших сотрудников, постоянный контакт с клиентом, гарантирует Вам
-                        спокойный сон даже в сложной ситуации.</p>
+            <form class="subscribe-form">
+                <div class="h5">Подписаться на новости</div>
+                <div class="action-holder">
+                    <input type="text" placeholder="E-mail">
+                    <button type="submit">Подписаться</button>
                 </div>
-                <form class="subscribe-form">
-                    <div class="h5">Подписаться на новости</div>
-                    <div class="action-holder">
-                        <input type="text" placeholder="E-mail">
-                        <button type="submit">Подписаться</button>
-                    </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
 </main>
