--- a/app/single.html
+++ b/app/single.html
@@ -76,10 +76,13 @@
                     <div class="title">Услуги</div>
                     <ul class="services-holder">
                         <li class="item">
-                            <div class="accordion">Помощь и поддержка квалифицированных и дипломированных адвокатов</div>
+                            <div class="accordion">Помощь и поддержка квалифицированных и дипломированных адвокатов
+                            </div>
                             <div class="panel">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco
                                     laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </li>
@@ -87,8 +90,10 @@
                         <li class="item">
                             <div class="accordion">Быстрое решение любой проблемы</div>
                             <div class="panel">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco
                                     laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </li>
@@ -96,8 +101,10 @@
                         <li class="item">
                             <div class="accordion">Индивидуальный и оптимальный подход к каждому делу.</div>
                             <div class="panel">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco
                                     laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </li>
@@ -107,32 +114,35 @@
             <div class="intro-categories align-center">
                 <div class="title">Записаться на консультацию</div>
                 <form class="consultation">
-                    <input type="text" placeholder="Номер телефона">
-                    <input type="email" placeholder="Email">
+                    <div class="action-holder">
+                        <input type="text" placeholder="Номер телефона">
+                    </div>
+                    <div class="action-holder">
+                        <input type="email" placeholder="Email">
+                    </div>
                     <button type="submit">
                         Отправить
                     </button>
                 </form>
             </div>
         </div>
-
-        <div class="pre-footer no-media ">
-            <div class="subscribe-block">
-                <div class="quote-block">
-                    <h4>Успех адвокатского объединения - успех клиента.</h4>
-                    <p>Многолетний опыт адвокатской деятельности в сочетании с нестандартным подходом, обеспечит
-                        разработку эффективной линии защиты Вас и Вашего бизнеса с использованием законных правовых
-                        инструментов. Профессионализм наших сотрудников, постоянный контакт с клиентом, гарантирует Вам
-                        спокойный сон даже в сложной ситуации.</p>
-                </div>
-                <form class="subscribe-form">
-                    <div class="h5">Подписаться на новости</div>
-                    <div class="action-holder">
-                        <input type="text" placeholder="E-mail">
-                        <button type="submit">Подписаться</button>
-                    </div>
-                </form>
+    </div>
+    <div class="pre-footer no-media ">
+        <div class="subscribe-block">
+            <div class="quote-block">
+                <h4>Успех адвокатского объединения - успех клиента.</h4>
+                <p>Многолетний опыт адвокатской деятельности в сочетании с нестандартным подходом, обеспечит
+                    разработку эффективной линии защиты Вас и Вашего бизнеса с использованием законных правовых
+                    инструментов. Профессионализм наших сотрудников, постоянный контакт с клиентом, гарантирует Вам
+                    спокойный сон даже в сложной ситуации.</p>
             </div>
+            <form class="subscribe-form">
+                <div class="h5">Подписаться на новости</div>
+                <div class="action-holder">
+                    <input type="text" placeholder="E-mail">
+                    <button type="submit">Подписаться</button>
+                </div>
+            </form>
         </div>
     </div>
 </main>
