--- a/app/about-us.html
+++ b/app/about-us.html
@@ -38,6 +38,14 @@
             </nav>
         </div>
         <div class="action-wrapper">
+            <div class="langs-holder">
+                <div class="current-lang lang-accordion">RU</div>
+                <ul class="langs lang-panel">
+                    <li class="active"><a href="#">Ru</a></li>
+                    <li><a href="#">Uk</a></li>
+                    <li><a href="#">En</a></li>
+                </ul>
+            </div>
             <a href="contact-us.html" class="button">Запись на консультацию</a>
             <div class="burger show-mob">
                 <span></span>
