--- a/app/articles.html
+++ b/app/articles.html
@@ -38,6 +38,14 @@
             </nav>
         </div>
         <div class="action-wrapper">
+            <div class="langs-holder">
+                <div class="current-lang lang-accordion">RU</div>
+                <ul class="langs lang-panel">
+                    <li class="active"><a href="#">Ru</a></li>
+                    <li><a href="#">Uk</a></li>
+                    <li><a href="#">En</a></li>
+                </ul>
+            </div>
             <a href="contact-us.html" class="button">Запись на консультацию</a>
             <div class="burger show-mob">
                 <span></span>
@@ -154,10 +162,10 @@
                     <div class="current-tab accordion">Все новости</div>
                     <ul class="tabs panel">
                         <li class="active">Все новости</li>
-                        <li>Аналитические статьи</li>
-                        <li>Правовые консультации</li>
-                        <li>Интервью</li>
-                        <li>Результаты опросов</li>
+                        <li><a href="#">Аналитические статьи</a></li>
+                        <li><a href="#">Правовые консультации</a></li>
+                        <li><a href="#">Интервью</a></li>
+                        <li><a href="#">Результаты опросов</a></li>
                     </ul>
                 </div>
                 <div class="container--tabs">
